--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900);
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic);
 
+.imgRedonda {
+    width:300px;
+    height:280px;
+    border-radius:150px;
+    border:5px solid #fff;
+	-webkit-box-shadow: 1px 1px 10px #484848;
+}
+
 .map-responsive{
     overflow:hidden;
     padding-bottom:56.25%;
